--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "react-native-gifted-chat": "^2.4.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-image-picker": "~15.0.7",
+    "expo-media-library": "~16.0.4",
+    "expo-location": "~17.0.1",
+    "react-native-maps": "1.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
